Fixed django file to run testcases properly fixed the signup testcases due to security question.

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,4 +27,5 @@ jobs:
         pip install -r src/requirements.txt
     - name: Run Tests
       run: |
+        cp src/medvoyage/settings-old.py src/medvoyage/settings.py
         python src/manage.py test main
