--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,4 +28,5 @@ jobs:
     - name: Run Tests
       run: |
         cp src/medvoyage/settings-old.py src/medvoyage/settings.py
+        python src/manage.py makemigrations && python src/manage.py migrate
         python src/manage.py test main
