--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,4 +27,6 @@ jobs:
         pip install -r src/requirements.txt
     - name: Run Tests
       run: |
-        python src/manage.py test
+        cp src/medvoyage/settings-old.py src/medvoyage/settings.py
+        python src/manage.py makemigrations && python src/manage.py migrate
+        python src/manage.py test main
