--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -29,4 +29,4 @@ jobs:
       run: |
         cp src/medvoyage/settings-old.py src/medvoyage/settings.py
         python src/manage.py makemigrations && python src/manage.py migrate
-        python src/manage.py test main
+        python src/manage.py test src/main/tests/
